# livedelay-obs-plugin

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  legacy-stdio-stub.c
.github/workflows/: build.yml
data/locale/: en-US.ini
src/: delay-manager.cpp  delay-manager.h  plugin-main.cpp  ui-components.cpp  ui-components.h
